--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
     <div class="img_background">
       <img
         class="back_img"
-        src="https://images.unsplash.com/photo-1676643136045-6cfe7eb1fef9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
+        src="https://images.unsplash.com/photo-1523263983652-bb7473e297ad?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
         alt=""
       />
-      <img
-        class="logo"
-        src="https://images.unsplash.com/photo-1556742205-e10c9486e506?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
-        alt=""
-      />
+      <div class="log_img">
+        <img class="logo" src="/odin-lined.png" alt="" />
+      </div>
     </div>
 
     <fieldset>
@@ -42,35 +40,36 @@
             <label for="email">Email *</label><br />
             <input type="email" name="email" id="email" required />
           </div>
+
           <div class="form_info">
-            <label for="phone">Phone Number *</label><br />
-            <input type="number" name="phoneNumber" id="phone" required />
+            <label for="phone">Phone Number*</label><br />
+            <input
+              type="number"
+              name="phoneNumber"
+              min="6"
+              id="phone"
+              required
+            />
           </div>
           <div class="form_info">
             <label for="password">Password *</label><br />
-            <input
-              type="password"
-              name="password"
-              id="password"
-              required="true"
-            />
+            <input type="password" name="password" id="password" />
+            <small class="msg">Please enter password</small>
           </div>
-          <div>
+          <div class="form_info">
             <label for="Con_password">Confirm Password *</label><br />
-            <input
-              type="password"
-              name="Con_password"
-              id="Con_password"
-              required="true"
-            />
+            <input type="password" name="Con_password" id="Con_password" />
           </div>
         </div>
+        <button type="submit">Submit</button>
       </form>
-      <button type="submit">Submit</button>
-      <h3>Already a member</h3>
-      <a href="#" target="_blank">Log in</a>
+
+      <div class="footer">
+        <h3>Already a member ?</h3>
+        <a href="#" target="_blank">Log in</a>
+      </div>
     </fieldset>
 
-    <script src="sctipt.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
