adding JS validation

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         </div>
         <button type="submit">Submit</button>
       </form>
+      <div class="error_message">
+        <p>Pleae make sure to enter all the correct fields</p>
+      </div>
 
       <div class="footer">
         <h3>Already a member ?</h3>
